@@ -17,6 +17,7 @@
 - added new command `CMD('importbuild', 'URL address', [callback(err)])` method for importing Total.js Builds
 - extended `NEWEXTENSION()` by adding support for `html` type in the form `<script total> ... <file name="index.html"> ...`
 - added auto-handling files in extensions in the form `/-extension_name/filename`
+- extended plugins by adding support for `html` type in the form `<script total> ... <file name="index.html"> ...`
 
 ========================
 0.0.56
